# vclipboard

./: Cargo.toml  README.md  package.json
.github/workflows/: build.yml
src/: App.vue  app.rs  lib.rs  main.rs  platform.rs  storage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  lib.rs  main.rs  platform.rs  storage.rs  types.rs
