[package]
name = "vclipboard"
version = "0.1.0"
description = "Clipboard history desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "vclipboard_lib"
crate-type = ["rlib"]

[[bin]]
name = "Vclipboard"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
directories = "5"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg"] }
global-hotkey = "0.7.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
raw-window-handle = "0.6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.21.0"
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
