[package]
name = "rust"
version = "0.1.0"
description = "Clipboard history desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "rust_lib"
crate-type = ["rlib"]

[dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
directories = "5"
eframe = "0.33.3"
egui_extras = "0.33.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
