[package]
name = "vclipboard"
version = "0.1.0"
description = "Clipboard history desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "vclipboard_lib"
crate-type = ["rlib"]

[[bin]]
name = "Vclipboard"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
directories = "5"
eframe = "0.33.3"
egui_extras = "0.33.3"
global-hotkey = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.21.0"
